<resources>
    <string name="app_name" translatable="false">Music downloader</string>
    <string name="ads_app_id" translatable="false">ca-app-pub-3943517385835088~5755803950</string>
    <string name="applovin_sdk_key" translatable="false">HKq3PPClqZBdgSfBe5a1Ufbgva7Drz-6OFAspX55i8vo5kJ3ErHSMxBRz63idAbTytV7UbkuA1psBR6npnhVH4</string>
    <string name="appvolin_full" translatable="false">8eb52dbe7f496c33</string>
    <string name="appvolin_native" translatable="false">fcd03955b831dd01</string>
    <string name="banner_01" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_02" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="full_plash_01" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="full_plash_02" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="full_in_app_01" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="full_in_app_02" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="full_menu_01" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="full_menu_02" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="native_ads_home_01" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="native_ads_home_02" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="native_ads_01" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="native_ads_02" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="native_ads_language_01" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="native_ads_language_02" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="app_open_ads" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="full_download_01" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="full_download_02" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="full_nowplaying_01" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="full_nowplaying_02" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="category_edm" translatable="false">EDM</string>
    <string name="category_acoustic" translatable="false">Acoustic</string>
    <string name="category_carmusic" translatable="false">Car EDM</string>
    <string name="category_chill" translatable="false">Chill</string>
    <string name="category_indie" translatable="false">Indie</string>
    <string name="category_piano" translatable="false">Piano</string>
    <string name="category_rain" translatable="false">Rain</string>
    <string name="category_rock" translatable="false">Rock</string>
    <string name="category_tiktok_remix" translatable="false">Tiktok Remix</string>
    <string name="category_toursim" translatable="false">Toursim</string>
    <string name="category_workout" translatable="false">Workout</string>
    <string name="category_hiphop" translatable="false">Hiphop</string>
    <string name="allowed_caller_log" translatable="false">
        Caller has a valid certificate, but its package doesn\'t match any expected package for the
        given certificate. To allow this caller, add the following to the allowed callers list:\n
        <![CDATA[
        <signature name=\"%1$s\" package=\"%2$s\">\n\t<key>%3$s</key>\n</signature>\n
        ]]>
    </string>
    <string name="detail">Detail</string>
    <string name="no_playlist_play">No playlist is being played</string>
    <string name="txt_done">Done!</string>
    <string name="success">Success</string>
    <string name="song_info">Song information</string>
    <string name="location">Location</string>
    <string name="duration">Duration</string>
    <string name="open_with">Open with</string>
    <string name="duplicate_playlist">Playlist has existed!</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="chose_playlist">Choose playlist</string>
    <string name="song_exits_playlist">The song exists in the playlist!</string>
    <string name="delete_song_in_playlist">Delete the song from the playlist</string>
    <string name="cant_delete_file">Cannot delete this file</string>
    <string name="file_not_found">File not found !</string>
    <string name="music_has_stop">Music will be stopped later</string>
    <string name="minute">minutes</string>
    <string name="second">seconds</string>
    <string name="subject_share">Share the application</string>
    <string name="content_share">I really like this app, download and use it</string>
    <string name="unknow">Unknown</string>
    <string name="internal">Internal memory</string>
    <string name="external">External memory</string>
    <string name="create_new_playlist">Create new playlist</string>
    <string name="favorite_song">Favorite songs</string>
    <string name="setting">Settings</string>
    <string name="timer_stop_music">Music stop timer</string>
    <string name="guide">Guide</string>
    <string name="title_album">Albums</string>
    <string name="title_artists">Artists</string>
    <string name="title_songs">Songs</string>
    <string name="title_folders">Folders</string>
    <string name="title_playlist">Playlists</string>
    <string name="new_preset_duplicate">Preset already exists</string>
    <string name="save_preset_success">Preset saved successfully!</string>
    <string name="cant_update">Cannot update the preset, please try again!</string>
    <string name="preset_update_successfully">Preset updated successfully!</string>
    <string name="empty_name">Empty preset name!</string>
    <string name="error">Error</string>
    <string name="please_chose_preset_to_update">Please select the effect you want to update</string>
    <string name="search">Search</string>
    <string name="next_song">Next song</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="set_ringtone">Set as ringtone</string>
    <string name="privacy">Privacy policy</string>
    <string name="share">Share</string>
    <string name="more_app">More apps</string>
    <string name="ask_save_lyric">Do you want to save the lyrics?</string>
    <string name="save_lyric_done">The lyrics have been saved !</string>
    <string name="invalid_lyric">Can\'t find the correct lyrics?</string>
    <string name="find_on_gg">Please search on Google and replace.</string>
    <string name="play">Play</string>
    <string name="play_next">Next</string>
    <string name="shuffle">Shuffle</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="pin_folder">Pin folder</string>
    <string name="add_home_screen">Add to home screen</string>
    <string name="add_songs">Add songs</string>
    <string name="txt_continue">Continue</string>
    <string name="sort">Sort by</string>
    <string name="sort_name">Name</string>
    <string name="get_permission">Get permission</string>
    <string name="need_permission">You need permission to use the application</string>
    <string name="per_1">Access Media File to take out the music</string>
    <string name="per_manage_all_file">Permission to access all files to add, edit, delete, songs and lyrics</string>
    <string name="no_song_play">No songs are currently playing!</string>
    <string name="create_new">Create new</string>
    <string name="enter_name">Enter a name</string>
    <string name="create">Create</string>
    <string name="chose_time">Choose time</string>
    <string name="cancel">Cancel</string>
    <string name="chose">Choose</string>
    <string name="now_playing">Now playing</string>
    <string name="bass_boster">Bass bosster</string>
    <string name="virtual">3D effect</string>
    <string name="title_equalizer">Equalizer</string>
    <string name="tit_artist">Artist</string>
    <string name="search_lyric">Search Lyrics</string>
    <string name="tooltip_copy">Please select Lyrics and Copy to Clipboard</string>
    <string name="select_preset">Select preset</string>
    <string name="empty_preset">No preset, please create new preset</string>
    <string name="save_or_update_preset">Save or update the preset</string>
    <string name="update">Update</string>
    <string name="tuto_unflug_headphone">Automatically stop when the headset is unplugged </string>
    <string name="tuto_flug_headphone"> Automatically play when the headset is plugged in </string>
    <string name="tuto_one_click">1 click to play/pause</string>
    <string name="tuto_volumeup">Volume up</string>
    <string name="tuto_two_click">2 click to move to the next</string>
    <string name="show_block_folder">Show blocked folders</string>
    <string name="unblock_folder">Unblock Folder</string>
    <string name="blocked_folders">Hidden folders</string>
    <string name="empty_block_content">No contents are blocked yet!</string>
    <string name="song_path_not_exist">The song\'s path does not exist!</string>
    <string name="block_album">Hide albums</string>
    <string name="pin_album">Pin albums</string>
    <string name="blocked_albums">Hidden albums</string>
    <string name="sort_count">Songs number</string>
    <string name="tuto_three_click">3 click to move to the previous </string>
    <string name="tuto_volumedown">Volume down</string>
    <string name="accept">Accept</string>
    <string name="empty_playlist">No playlist name</string>
    <string name="select_all">Select all</string>
    <string name="lyrics">Lyrics</string>
    <string name="find_lyrics">Find Lyrics</string>
    <string name="input_name_song">Enter the song\'s title</string>
    <string name="load_lyric">Looking for the lyrics</string>
    <string name="sort_album">Album</string>
    <string name="sort_artist">Artist</string>
    <string name="order_by">Order by</string>
    <string name="order_ascending">Ascending</string>
    <string name="order_descending">Descending</string>
    <string name="block_folder">Hide folder</string>
    <string name="unpin">Unpin</string>
    <string name="cant_rename">Cannot rename</string>
    <string name="ask_delete_song">Do you want to delete the file?</string>
    <string name="unsupport_format">Unsupported Format</string>
    <string name="edit_loading_text">Loading data…</string>
    <string name="sort_year">Year released</string>
    <string name="dialog_saving">Saving</string>
    <string name="editor_starts">Start</string>
    <string name="edtior_ends">End</string>
    <string name="ringtone_cutter">Ringtone cutter</string>
    <string name="cant_cut_this_song">Cannot cut the current track</string>
    <string name="error_cutter_msg">The file\'s name contains special characters, Please change the file\'s name and try again.</string>
    <string name="change_file_name">Please try to change file\'s name</string>
    <string name="sort_duration">Duration</string>
    <string name="skip_song_30s">Skip the songs which are less than 30 seconds</string>
    <string name="show_block_artist">Show blocked artists</string>
    <string name="show_block_album">Show blocked albums</string>
    <string name="sort_album_count">Album count</string>
    <string name="go_album">Go to album</string>
    <string name="go_artist">Go to artist</string>
    <string name="go_folder">Go to folder</string>
    <string name="custom">Custom</string>
    <string name="ringtone_option">Ringtone option</string>
    <string name="change_font_size">Change font size</string>
    <string name="large_font">Large font</string>
    <string name="small_font">Small</string>
    <string name="normal_font">Normal</string>
</resources>