<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuPlay"
        android:title="@string/play"/>
    <item
        android:id="@+id/menuPlayNext"
        android:title="@string/play_next"/>
    <item
        android:id="@+id/menuShuffle"
        android:title="@string/shuffle"/>
    <item
        android:id="@+id/menuAddQueue"
        android:title="@string/add_to_queue"/>
    <item
        android:id="@+id/menuAddToPlaylist"
        android:title="@string/add_to_playlist"/>
    <item
        android:id="@+id/menuBlockItem"
        android:title="@string/block_folder"/>
    <item
        android:id="@+id/menuPinItem"
        android:title="@string/pin_folder"/>
    <item
        android:id="@+id/menuAddToHomeScreen"
        android:title="@string/add_home_screen"/>
</menu>