<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_sort"
        android:checkableBehavior="single"
        android:orderInCategory="1">
        <item
            android:checkable="false"
            android:enabled="false"
            android:title="@string/sort"/>
        <item
            android:id="@+id/sortByName"
            android:checked="true"
            android:title="@string/sort_name"/>
        <item
            android:id="@+id/sortByAlbum"
            android:title="@string/sort_album"/>
        <item
            android:id="@+id/sortByArtist"
            android:title="@string/sort_artist"/>
        <item
            android:id="@+id/sortByDuration"
            android:title="@string/sort_duration"/>
    </group>

    <group
        android:id="@+id/group_order"
        android:checkableBehavior="single"
        android:orderInCategory="1">
        <item
            android:checkable="false"
            android:enabled="false"
            android:title="@string/order_by"/>
        <item
            android:id="@+id/orderAsc"
            android:checked="true"
            android:title="@string/order_ascending"/>
        <item
            android:id="@+id/orderDesc"
            android:title="@string/order_descending"/>
    </group>
</menu>