<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_border_bottom_sheet"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/theme_default"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#80000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:fontFamily="@font/baloo_bold"
        android:paddingLeft="@dimen/dp_8"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toTopOf="@id/tv_artist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imgThumb"
        app:layout_constraintTop_toTopOf="@id/imgThumb"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_artist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:fontFamily="@font/baloo_regular"
        android:paddingLeft="@dimen/dp_8"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/imgThumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imgThumb"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgThumb"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_song"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/Shape4dp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgThumb">

        <LinearLayout
            android:id="@+id/dialog_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_next_track"
                style="@style/ButtonDialogStyle"
                android:drawableStart="@drawable/ic_next_song"
                android:text="@string/next_song" />

            <Button
                android:id="@+id/btn_add_to_playlist"
                style="@style/ButtonDialogStyle"
                android:drawableStart="@drawable/ic_add_to_playlist"
                android:text="@string/add_to_playlist" />

            <Button
                android:id="@+id/btn_set_ringtone"
                style="@style/ButtonDialogStyle"
                android:drawableStart="@drawable/ic_set_ringtone"
                android:text="@string/set_ringtone" />

            <Button
                android:id="@+id/btnGoArtist"
                style="@style/ButtonDialogStyle"
                android:drawableStart="@drawable/ic_go_artist"
                android:text="@string/go_artist" />

            <Button
                android:id="@+id/btnGoAlbum"
                style="@style/ButtonDialogStyle"
                android:drawableStart="@drawable/ic_go_album"
                android:text="@string/go_album" />

            <Button
                android:id="@+id/btnGoFolder"
                style="@style/ButtonDialogStyle"
                android:drawableStart="@drawable/ic_go_folder"
                android:text="@string/go_folder" />

            <Button
                android:id="@+id/btn_detail"
                style="@style/ButtonDialogStyle"
                android:drawableStart="@drawable/ic_detail"
                android:text="@string/detail" />

            <Button
                android:id="@+id/btn_share"
                style="@style/ButtonDialogStyle"
                android:drawableStart="@drawable/ic_share"
                android:text="@string/share" />

            <Button
                android:id="@+id/btn_delete"
                style="@style/ButtonDialogStyle"
                android:drawableStart="@drawable/ic_delete"
                android:text="@string/delete" />

            <Button
                android:id="@+id/btn_delete_playlist_song"
                style="@style/ButtonDialogStyle"
                android:drawableStart="@drawable/ic_delete"
                android:text="@string/delete_song_in_playlist" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
