<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardElevation="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="#ffffff"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:fontFamily="@font/baloo_bold"
            android:padding="16dp"
            android:text="@string/change_font_size"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"/>

        <RadioGroup
            android:id="@+id/groupFontSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rdSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/black"
                android:padding="16dp"
                android:text="@string/small_font"
                android:textColor="@color/black"/>

            <RadioButton
                android:id="@+id/rdNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/black"
                android:padding="16dp"
                android:text="@string/normal_font"
                android:textColor="@color/black"/>

            <RadioButton
                android:id="@+id/rdLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/black"
                android:padding="16dp"
                android:text="@string/large_font"
                android:textColor="@color/black"/>
        </RadioGroup>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtFeedBack"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>